# sample-agent2agent-trivia-night

./: .gitignore  .gitleaksignore  .grype.yaml  .semgrepignore  README.md  package-platform.sh  pyproject.toml
agents/A2A/: a2a.md
agents/A2A/.ArXivResearchAgent/: README.md  agent_card.json  main.py  requirements.txt
agents/A2A/.StatisticianAgent/: boto3_helper.py  main.py  requirements.txt  tools.py
agents/A2A/Adverse event/: Dockerfile  agent_card.json  detect_signals.py  generate_report.py  requirements.txt
agents/A2A/AdverseEventAgent/: README.md  ae_config.py  main.py  search_literature.py
agents/A2A/AdverseEventsAgent/: agent.py  test_e2e_with_registry.py
agents/A2A/ArXivResearchAgent/: config.py  get_paper.py  search_arxiv.py
agents/AwsKnowledgeAgent/: README.md  main.py  requirements.txt
agents/AwsKnowledgeAgent/app/AWSKnowledgeAgent/: Dockerfile  pyproject.toml
agents/NYCTransitExpert/: README.md  main.py
agents/OrchestratorAgent/: main.py  requirements.txt
agents/aws_agent/: main.py
infrastructure/: agentcore-policies.yaml  agents.yaml  code-editor.yaml  cognito.yaml  deploy-agents.sh  platform.yaml
platform/: deploy.sh  destroy.sh
platform/infrastructure/: cdk.json  package-lock.json  package.json  synth.sh
platform/lambda/: requirements-dev.txt  requirements.txt
platform/web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: deploy_and_register.py  get_agent_card.py  get_m2m_token.py  my_a2a_client_remote.py  register_a2a.py  register_agent.py  test_mcp.py  test_mcp_oauth.py
(+129 files in other folders)
