[project]
name = "agent2agent-trivia-night-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.4.0",
    "bedrock-agentcore-starter-toolkit>=0.3.2",
    "boto3>=1.42.57",
    "chardet<6.0.0",
    "defusedxml>=0.7.1",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "paper-qa>=2026.3.3",
    "strands-agents-tools>=0.2.22",
    "strands-agents[a2a]>=1.28.0",
]
